--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-i.Nav {
+.Nav {
   background-color: #fff;
   border-bottom: 1px solid rgba(0, 0, 0, 0.0975);
   position: fixed;
@@ -9,14 +9,13 @@ i.Nav {
   transition: height 0.2s ease-in-out;
   height: 77px;
 }
-
 .Nav-menus {
-display: flex;
-flex-direction: row;
-height: 77px;
-width: 70%;
-margin: 0 auto;
-padding: 26px 40px;
+  display: flex;
+  flex-direction: row;
+  height: 77px;
+  width: 70%;
+  margin: 0 auto;
+  padding: 26px 40px;
 }
 .Nav-brand-logo {
   display: block;
